--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -2,16 +2,18 @@
 
 
 <body>
-    <header class="main-header-container">
-        <div class="main-header container">
-            <h1>
-                <a class="main-logo" href="/">
-                    <i class="fa-solid fa-utensils main-logo-icon"></i>
-                    <span class="main-logo-text">Receitas</span>
-                </a>
-            </h1>
+    {% include 'recipes/partials/header.html'%}
+    {% include 'recipes/partials/search.html'%}
+
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://placehold.co/1280x720.png/#269fe6" alt="Temporário">
+                </div>
+            </div>
         </div>
-    </header>
+    </main>
 </body>
 
 </html>
