--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -11,7 +11,57 @@
                 <div class="recipe-cover">
                     <img src="https://placehold.co/1280x720.png/#269fe6" alt="Temporário">
                 </div>
+                <div class="recipe-title-container">
+                    <h2 class="recipe-title">Lorem ipsum dolor sit amet.</h2>
+                </div>
+
+                <div class="recipe-author">
+                    <span class="recipe-author-item">
+                        <i class="fas fa-user"></i>
+                        Guilherme Brito
+                    </span>
+                    <span class="recipe-author-item">
+                        <i class="fas fa-calendar-alt"></i>
+                        16/10/2021 às 11:21
+                    </span>
+                    <span class="recipe-author-item">
+                        <a href="/recipes/category/cafe-da-manha/">
+                            <i class="fas fa-layer-group"></i>
+                            <span>Café da manhã</span>
+                        </a>
+                    </span>
+                </div>
+
+                <div class="recipe-content">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Nam quaerat numquam aliquid. Explicabo harum, accusantium libero 
+                        cumque fugit sint? Consectetur nam perspiciatis quia. Eaque quod, iure adipisci dolore iusto autem.</p>
+                </div>
+
+                <div class="recipe-meta-container">
+                    <div class="recipe-meta recipe-preparation">
+                        <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
+                        <div class="recipe-meta-text">
+                            0 Minutos
+                        </div>
+                    </div>
+                    <div class="recipe-meta recipe-servings">
+                        <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
+                        <div class="recipe-meta-text">
+                            0 Porções
+                        </div>
+                    </div>
+                </div>
+
+                <footer class="recipe-footer">
+                    <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
+                        <i class="fas fa-eye"></i>
+                        <span>ver mais...</span>
+                    </a>
+                </footer>
+
             </div>
+
         </div>
     </main>
 </body>
