--- a/recipes/templates/recipes/partials/footer.html
+++ b/recipes/templates/recipes/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="main-footer">
     <div class="developer">
-      <a href="https://www.otaviomiranda.com.br/" target="_blank" rel="noreferrer noopener">By Guilherme Brito</a>
+      <a href="https://www.linkedin.com/in/guilherme-eduardo/" target="_blank" rel="noreferrer noopener">By Guilherme Brito</a>
     </div>
   
     <div class="powered">
