--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,19 +1,13 @@
-{% include 'recipes/partials/head.html' %}
+{% extends "global/base.html" %}
 
-<body>
-    {% include 'recipes/partials/header.html'%}
-    {% include 'recipes/partials/search.html'%}
-
-    <main class="main-content-container">
+{% block content %}
         <div class="main-content main-content-list container">
             {% include 'recipes/partials/recipe.html' %}
             {% include 'recipes/partials/recipe.html' %}
             {% include 'recipes/partials/recipe.html' %}
             {% include 'recipes/partials/recipe.html' %}
         </div>
-    </main>
+{% endblock content %}
 
-    {% include 'recipes/partials/footer.html' %}
-</body>
-
-</html>
+# Esse código esta sendo extendido para base html
+   
