--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -9,5 +9,5 @@
         </div>
 {% endblock content %}
 
-# Esse código esta sendo extendido para base html
+<!-- Esse código esta sendo extendido para base html -->
    
