--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -1,8 +1,8 @@
 <header class="main-header-container">
     <div class="main-header container">
         <h1>
-            <a class="main-logo" href="/">
-                <i class="fa-solid fa-utensils main-logo-icon"></i>
+            <a class="main-logo" href="{% url "recipes:home" %}"> <!--O URL, faz a conexão de um link com uma URL criada no views e nomeada no url.py-->
+                <i class="fa-solid fa-utensils main-logo-icon"></i> 
                 <span class="main-logo-text">Receitas</span>
             </a>
         </h1>
