--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -27,10 +27,12 @@
             {{recipe.created_at|date:"d/m/Y"}} às {{recipe.created_at|date:"H:i:s"}}
         </span>
         <span class="recipe-author-item">
-            <a href="{% url 'recipes:category' recipe.category.id %}">
-                <i class="fas fa-layer-group"></i>
-                <span>{{recipe.category.name}}</span>
-            </a>
+            {% if  recipe.category is not None%}
+                    <a href="{% url 'recipes:category' recipe.category.id %}">
+                        <i class="fas fa-layer-group"></i>
+                        <span>{{recipe.category.name}}</span>
+                    </a>
+            {% endif %}
         </span>
     </div>
 
