--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -66,9 +66,13 @@
     {% endif %}
 
     {% if is_detail_page is True %}
-    <div class="preparation-steps">
-        {{recipe.preparation_steps| linebreaksbr}}
-    </div>
+        <div class="preparation-steps">
+            {% if recipe.preparation_steps_is_html is True %}
+                {{recipe.preparation_steps| safe}}  <!-- O safe diz que o conteudo é seguro transformando o conteudo em html -->
+            {% else %}
+                {{recipe.preparation_steps| linebreaksbr}}
+            {% endif %}
+        </div>
     {% endif %}
 
 </div>
