--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,11 +4,16 @@
 
 {% block content %}
         <div class="main-content main-content-list container">
-            {% for recipe in recipes %}
+            {% for  recipe in recipes  %}
                 {% include 'recipes/partials/recipe.html' %}
+            {% empty %}
+            <div class="center">
+                <h1>Página não encontrada</h1>
+            </div>
             {% endfor %}
         </div>
 {% endblock content %}
 
 <!-- Esse código esta sendo extendido para base html -->
+<!-- O for empty é usado como um for com um if, ou seja, percorra isso, mas, se tiver vazio não percorra -->
    
